--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.1.0",
     "axios": "^1.7.2",
+    "embla-carousel-react": "^8.1.3",
     "mongodb": "^6.6.2",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
